include doctest-ignore-unicode

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps =
     bsddb3
     six
     SPARQLWrapper>=1.6.2
+    doctest-ignore-unicode
 
 [testenv:cover]
 basepython =
@@ -34,3 +35,4 @@ deps =
     bsddb3
     six
     SPARQLWrapper>=1.6.2
+    doctest-ignore-unicode
